[gd_scene load_steps=3 format=3 uid="uid://vrsi4xbkdeds"]

[ext_resource type="Script" path="res://scripts/hud/hud.gd" id="1_bgsh1"]
[ext_resource type="Theme" uid="uid://boewen5utu4mk" path="res://assets/themes/default_theme.tres" id="1_ibe4v"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bgsh1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ibe4v")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 127.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HeightLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "H:"

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "S:"

[node name="MaxHeightLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "MH:"

[node name="AmmoLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "A: "
